unpackaged/main/default/objects/CICO_Check_In__c/CICO_Check_In__c.object-meta.xml
<CustomObject>
    <label>Check In</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>CI Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check In</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>