unpackaged/main/default/objects/CICO_Check_In__c/fields/Assigned_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Driver_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Driver ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>