unpackaged/main/default/objects/CICO_Check_In__c/fields/Cassette_Player__c.field-meta.xml
<CustomField>
    <fullName>Cassette_Player__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cassette Player</label>
    <type>Checkbox</type>
</CustomField>