unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Check In Date</label>
    <type>DateTime</type>
</CustomField>