unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_In_for__c.field-meta.xml
<CustomField>
    <fullName>Check_In_for__c</fullName>
    <label>Check In for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Internal Assignments</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Vehicle Rental</fullName>
            </value>
            <value>
                <fullName>Vehicle Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>