unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_in_fuel_reading__c.field-meta.xml
<CustomField>
    <fullName>Check_in_fuel_reading__c</fullName>
    <label>Check in Fuel Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>