unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_In_ID__c.field-meta.xml
<CustomField>
    <fullName>Check_In_ID__c</fullName>
    <label>Check In ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>