unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_in_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check in Location</label>
    <referenceTo>CICO_Workshop_Location__c</referenceTo>
    <relationshipLabel>Check In</relationshipLabel>
    <relationshipName>Check_In</relationshipName>
    <type>Lookup</type>
</CustomField>