unpackaged/main/default/objects/CICO_Check_In__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Out</label>
    <referenceTo>CICO_Check_Out__c</referenceTo>
    <relationshipLabel>Check In</relationshipLabel>
    <relationshipName>Check_In</relationshipName>
    <type>Lookup</type>
</CustomField>