unpackaged/main/default/objects/CICO_Check_In__c/fields/Checkin_Reading__c.field-meta.xml
<CustomField>
    <fullName>Checkin_Reading__c</fullName>
    <label>Check in Reading(KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>