unpackaged/main/default/objects/CICO_Check_In__c/fields/Document_No__c.field-meta.xml
<CustomField>
    <fullName>Document_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>