unpackaged/main/default/objects/CICO_Check_In__c/fields/Driver_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Driver_Change_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>