unpackaged/main/default/objects/CICO_Check_In__c/fields/Fire_Ext_In__c.field-meta.xml
<CustomField>
    <fullName>Fire_Ext_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Ext In</label>
    <type>Checkbox</type>
</CustomField>