unpackaged/main/default/objects/CICO_Check_In__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field is created to enter driver details who is bringing/taking vehicle</description>
    <label>Inspected By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check In (Inspected By)</relationshipLabel>
    <relationshipName>Check_In2</relationshipName>
    <type>Lookup</type>
</CustomField>