unpackaged/main/default/objects/CICO_Check_In__c/fields/Inspected_Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Inspected_Employee_No__c</fullName>
    <formula>Inspected_By__r.ETIN_Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspected Employee No.</label>
    <type>Text</type>
</CustomField>