unpackaged/main/default/objects/CICO_Check_In__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>