unpackaged/main/default/objects/CICO_Check_In__c/fields/Last_Check_Out_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_Out_Document_Number__c</fullName>
    <formula>Check_Out__r.Document_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check Out Document Number</label>
    <type>Text</type>
</CustomField>