unpackaged/main/default/objects/CICO_Check_In__c/fields/Last_Check_Out_Fuel_Reading__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_Out_Fuel_Reading__c</fullName>
    <formula>Check_Out__r.Check_Out_fuel_reading__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Check Out Fuel Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>