unpackaged/main/default/objects/CICO_Check_In__c/fields/Last_Checkout_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Checkout_Date__c</fullName>
    <formula>Check_Out__r.Check_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Checkout Date</label>
    <type>DateTime</type>
</CustomField>