unpackaged/main/default/objects/CICO_Check_In__c/fields/Microphone__c.field-meta.xml
<CustomField>
    <fullName>Microphone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Microphone</label>
    <type>Checkbox</type>
</CustomField>