unpackaged/main/default/objects/CICO_Check_In__c/fields/New_Driver__c.field-meta.xml
<CustomField>
    <fullName>New_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Driver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check In (New Driver)</relationshipLabel>
    <relationshipName>Check_In1</relationshipName>
    <type>Lookup</type>
</CustomField>