unpackaged/main/default/objects/CICO_Check_In__c/fields/Reflec_Trian__c.field-meta.xml
<CustomField>
    <fullName>Reflec_Trian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reflec Trian</label>
    <type>Checkbox</type>
</CustomField>