unpackaged/main/default/objects/CICO_Check_In__c/fields/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
                <default>true</default>
                <label>No Replacement</label>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
                <label>Off Hire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>