unpackaged/main/default/objects/CICO_Check_In__c/fields/Replacement_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Driver_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Driver ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check In</relationshipLabel>
    <relationshipName>Check_In</relationshipName>
    <type>Lookup</type>
</CustomField>