unpackaged/main/default/objects/CICO_Check_In__c/fields/Replacement_Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Internal_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Internal No</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Check In (Replacement Internal No)</relationshipLabel>
    <relationshipName>Check_In1</relationshipName>
    <type>Lookup</type>
</CustomField>