unpackaged/main/default/objects/CICO_Check_In__c/fields/Replacement_Option__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Option__c</fullName>
    <label>Replacement Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>