unpackaged/main/default/objects/CICO_Check_In__c/fields/Wheel_Cap__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wheel Cap</label>
    <type>Checkbox</type>
</CustomField>