unpackaged/main/default/objects/CICO_Check_In__c/validationRules/Check_In_Reading_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_In_Reading_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Checkin_Reading__c)),
NOT(REGEX( TEXT(Checkin_Reading__c) , &quot;^[0-9.]+$&quot;))

)</errorConditionFormula>
    <errorDisplayField>Checkin_Reading__c</errorDisplayField>
    <errorMessage>Enter a valid value.</errorMessage>
</ValidationRule>