unpackaged/main/default/objects/CICO_Check_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_In_for__c</columns>
    <columns>Plate_No__c</columns>
    <columns>Internal_No__c</columns>
    <columns>Check_In_Status__c</columns>
    <columns>Document_No__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>